--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/setup-python@v3
     - name: dependency
       run: |
-              python -m pip install --upgrade pip;
-              pip3 install -r requirements.txt;
-              python3 server.py > log.txt 2>&1 &;
+              python -m pip install --upgrade pip
+              pip3 install -r requirements.txt
+              python3 server.py > log.txt 2>&1 &
 
