--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,8 +11,11 @@ jobs:
     steps:    
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v3
-    - name: dependency
+    - name: flasktest
       run: |
               python -m pip install --upgrade pip
               pip3 install -r requirements.txt
-              pytest
+    - name: python test
+      run: |
+              python3 server.py >log.txt 2>1 &
+              pytest -vv
