--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,4 @@ jobs:
     - name: python test
       run: |
               python3 server.py >log.txt 2>1 &
-            
-    - name: Test rule 001
-      run: |
-              pytest -vv
+              pytest
